fix: reducing the contrast between blacks

--- a/index.css
+++ b/index.css
@@ -20,10 +20,10 @@ a{
 body{
     font-family: "Nunito Sans", sans-serif;
     color:white;
-    background-color: black;
+    background-color: #050505;
 }
 .header{
-    background-color: #181818;
+    background-color: #101010;
     height: 25vh;
 }
 .title{
@@ -36,7 +36,7 @@ body{
     justify-content: center;
     align-content: center;
     align-items: center;
-    height: 6vh;
+    height: 5vh;
     margin-top: 7vh;
 
 }
@@ -44,6 +44,8 @@ body{
     padding: 2vh;
     width: auto;
     border-left: 1px solid white;
+    transition: 0.3s;
+
 }
 .button-container:hover{
     background-color: #0e0d0d;
